--- a/app/src/main/res/layout/activity_list_user.xml
+++ b/app/src/main/res/layout/activity_list_user.xml
@@ -6,4 +6,10 @@
     android:layout_height="match_parent"
     tools:context="com.g81vdbvf.usermanager.ListUser">
 
+    <ListView
+        android:id="@+id/lv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/list_no_users"/>
+
 </android.support.constraint.ConstraintLayout>
