--- a/app/src/main/res/layout/activity_insert_user.xml
+++ b/app/src/main/res/layout/activity_insert_user.xml
@@ -20,9 +20,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
+    <Spinner
         android:id="@+id/nacionality"
-        android:layout_width="281dp"
+        android:layout_width="174dp"
         android:layout_height="47dp"
         android:layout_marginBottom="88dp"
         android:layout_marginEnd="8dp"
@@ -57,28 +57,31 @@
         android:layout_width="90dp"
         android:layout_height="33dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="64dp"
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="@string/male"
         app:layout_constraintBottom_toTopOf="@+id/numUsers"
-        app:layout_constraintStart_toStartOf="@+id/nacionality"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nacionality"
-        app:layout_constraintVertical_bias="0.743" />
+        app:layout_constraintVertical_bias="0.79" />
 
     <CheckBox
         android:id="@+id/checkFemale"
         android:layout_width="92dp"
         android:layout_height="31dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="@string/female"
         app:layout_constraintBottom_toTopOf="@+id/numUsers"
-        app:layout_constraintEnd_toEndOf="@+id/nacionality"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.441"
+        app:layout_constraintStart_toEndOf="@+id/checkMale"
         app:layout_constraintTop_toBottomOf="@+id/nacionality"
-        app:layout_constraintVertical_bias="0.756" />
+        app:layout_constraintVertical_bias="0.755" />
 
     <EditText
         android:id="@+id/regDate"
@@ -103,8 +106,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/genre"
         android:textColor="#000"
@@ -112,9 +113,11 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/numUsers"
         app:layout_constraintEnd_toEndOf="@+id/checkFemale"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="@+id/checkMale"
         app:layout_constraintTop_toBottomOf="@+id/nacionality"
-        app:layout_constraintVertical_bias="0.06" />
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
         android:id="@+id/textView3"
