--- a/app/src/main/res/layout-land/list_users.xml
+++ b/app/src/main/res/layout-land/list_users.xml
@@ -5,6 +5,8 @@
     android:id="@+id/linearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
+    android:descendantFocusability="blocksDescendants"
     android:paddingBottom="8dp">
 
     <ImageView
