Mejoras en interfaz (colores botones, etc)

--- a/app/src/main/res/layout/activity_pantalla_principal.xml
+++ b/app/src/main/res/layout/activity_pantalla_principal.xml
@@ -16,7 +16,12 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/insert_user"
-        android:drawableLeft="@drawable/ic_accessibility_white_36dp"
+        android:drawableStart="@drawable/ic_accessibility_white_36dp"
+        android:backgroundTint="#000"
+        android:textColor="#FFF"
+        android:drawableTint="@color/colorAccent"
+
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/buttonList"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.504"
@@ -26,27 +31,35 @@
 
     <Button
         android:id="@+id/buttonList"
-        android:layout_width="256dp"
+        android:layout_width="265dp"
         android:layout_height="52dp"
         android:layout_marginBottom="284dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:text="@string/list_user"
+        android:drawableStart="@drawable/ic_view_list_white_36dp"
+        android:backgroundTint="#000"
+        android:textColor="#FFF"
+        android:drawableTint="@color/colorAccent"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/buttonBorrar"
-        android:layout_width="197dp"
-        android:layout_height="51dp"
+        android:layout_width="265dp"
+        android:layout_height="52dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/principal_borrar_bbdd"
-        android:background="#F00"
+        android:drawableStart="@drawable/ic_delete_forever_white_36dp"
+        android:backgroundTint="#000"
         android:textColor="#FFF"
+        android:drawableTint="#F00"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
