--- a/app/src/main/res/layout/activity_insert_user.xml
+++ b/app/src/main/res/layout/activity_insert_user.xml
@@ -124,8 +124,6 @@
         android:layout_width="159dp"
         android:layout_height="30dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/register_date"
         android:textColor="#000"
@@ -133,24 +131,33 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/regDate"
         app:layout_constraintEnd_toEndOf="@+id/numUsers"
+        app:layout_constraintHorizontal_bias="0.504"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="@+id/numUsers"
         app:layout_constraintTop_toBottomOf="@+id/numUsers"
-        app:layout_constraintVertical_bias="0.196" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/insertCallAPI"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="265dp"
+        android:layout_height="52dp"
         android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
+        android:backgroundTint="#000"
+        android:drawableStart="@drawable/ic_person_add_white_36dp"
+        android:drawableTint="#FFF"
         android:text="@string/insert_user"
+        android:textColor="#FFF"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/regDate"
-        app:layout_constraintVertical_bias="0.157" />
+        app:layout_constraintVertical_bias="0.333" />
 
 
 </android.support.constraint.ConstraintLayout>
