--- a/app/src/main/res/layout/activity_mod_user.xml
+++ b/app/src/main/res/layout/activity_mod_user.xml
@@ -82,12 +82,17 @@
 
     <Button
         android:id="@+id/mod_ok"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="166dp"
+        android:layout_height="60dp"
         android:layout_marginBottom="8dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
+        android:drawableStart="@drawable/ic_save_white_36dp"
+        android:drawableTint="#FFF"
         android:text="@string/guardar_cambios"
+        android:backgroundTint="#000"
+        android:textColor="#FFF"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mod_nationality"
@@ -95,19 +100,22 @@
 
     <Button
         android:id="@+id/mod_cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="108dp"
+        android:layout_height="60dp"
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/cancelar"
+        android:textColor="#FFF"
+
+        android:backgroundTint="@color/colorAccent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.328"
+        app:layout_constraintHorizontal_bias="0.447"
         app:layout_constraintStart_toEndOf="@+id/mod_ok"
         app:layout_constraintTop_toBottomOf="@+id/mod_nationality"
-        app:layout_constraintVertical_bias="0.662" />
+        app:layout_constraintVertical_bias="0.661" />
 
     <Spinner
         android:id="@+id/mod_nationality"
