--- a/app/src/main/res/layout/activity_insert_user.xml
+++ b/app/src/main/res/layout/activity_insert_user.xml
@@ -157,7 +157,21 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/regDate"
-        app:layout_constraintVertical_bias="0.333" />
+        app:layout_constraintVertical_bias="0.045" />
+
+    <android.support.design.widget.BottomNavigationView
+        android:id="@+id/navigation"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="0dp"
+        android:layout_marginStart="0dp"
+        app:itemIconTint="#000"
+        android:background="?android:attr/windowBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:menu="@menu/navigation" />
+
 
 
 </android.support.constraint.ConstraintLayout>
