Sin warnings casi, cambiado el logo de la app y quitado código que no se utilizaba

--- a/app/src/main/res/layout/activity_mod_user.xml
+++ b/app/src/main/res/layout/activity_mod_user.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:text="@string/nombreSP"
         app:layout_constraintBottom_toTopOf="@+id/mod_nombre"
@@ -36,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/usuarioSP"
         app:layout_constraintBottom_toTopOf="@+id/mod_user"
@@ -48,7 +48,7 @@
         android:layout_width="315dp"
         android:layout_height="40dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="48dp"
         android:hint="@string/example"
         app:layout_constraintBottom_toTopOf="@+id/mod_pass"
@@ -61,7 +61,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/contrase_aSP"
         app:layout_constraintBottom_toTopOf="@+id/mod_pass"
@@ -74,7 +74,7 @@
         android:layout_height="40dp"
         android:layout_marginBottom="60dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:hint="@string/example"
         app:layout_constraintBottom_toTopOf="@+id/mod_nationality"
         app:layout_constraintEnd_toEndOf="parent"
@@ -136,7 +136,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:text="@string/nacionalidadSP"
         app:layout_constraintBottom_toTopOf="@+id/mod_nationality"
